# pytest-calculator

./: .coverage  .coveragerc  README.md  pyproject.toml
tests/: test_calculator.py  test_math_func.py  test_unittest_1.py
unittest_1/: calculator.py  math_func.py
