[tool.poetry]
name = "unittest-1"
version = "0.1.0"
description = ""
authors = ["Sitthakarn Prasomsup <sitthakarn.p@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "^3.0.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
